--- a/resources/sass/_navigation.scss
+++ b/resources/sass/_navigation.scss
@@ -1,7 +1,6 @@
-.menu .nav-link{
-	color: $primary !important;
+.shadow-tiny{
+	box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
 }
-
 
 .search{
 	.form-control{
@@ -22,5 +21,11 @@
 	&:hover {
 		background: $gray-100 !important;
 		border-color: transparent !important;
+	}
+}
+
+.mobile-menu{
+	.nav-item{
+		border-bottom: 1px solid $gray-200;
 	}
 }
